// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationRequestToast should render a cross-user verification 1`] = `
<div>
  <div>
    <div
      class="mx_Toast_description"
    >
      @alice:domain (@other:user)
    </div>
    <div
      aria-live="off"
      class="mx_Toast_buttons"
    >
      <button
        class="_button_i91xf_17"
        data-kind="secondary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        Ignore
      </button>
      <button
        class="_button_i91xf_17"
        data-kind="primary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        Verify Session
      </button>
    </div>
  </div>
</div>
`;

exports[`VerificationRequestToast should render a self-verification 1`] = `
<div>
  <div>
    <div
      class="mx_Toast_description"
    >
      my other device
      <div
        class="mx_Toast_detail"
      >
        other_device from 1.1.1.1
      </div>
    </div>
    <div
      aria-live="off"
      class="mx_Toast_buttons"
    >
      <button
        class="_button_i91xf_17"
        data-kind="secondary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        Ignore
      </button>
      <button
        class="_button_i91xf_17"
        data-kind="primary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        Verify Session
      </button>
    </div>
  </div>
</div>
`;
